Ma deuxieme version

--- a/style.css
+++ b/style.css
@@ -35,13 +35,8 @@ html
 {
     font-size: 1em;/* 16px*/
 }
-body
-{
-    background:#292727;
-}
 .container
 {
-    width: 95%;
     background-color: var(--couleurFond-color);
     margin: 1.2em auto;
     display: grid;
@@ -84,7 +79,7 @@ body
 }
 .nav-bar
 {
-    grid-column-start: 9;
+    grid-column-start: 11;
     grid-column-end: -1;
     justify-content: space-between;
 }
@@ -112,7 +107,7 @@ body
 {
     grid-column-start: 1;
     grid-column-end: -1;
-    background: linear-gradient(#00000066,#00000066), url(images/baniere.jpeg);
+    background: linear-gradient(#00002173,#00000173), url(images/baniere.jpeg);
     background-repeat: no-repeat;
     background-size:100% ;
     grid-row-start: 1;
@@ -360,8 +355,7 @@ body
 }
 .slogan
 {
-    display: none;
-
+    visibility: hidden;
 }
 
 @media  screen and (max-width:  1780px)
