--- a/responsiveTablette.css
+++ b/responsiveTablette.css
@@ -180,6 +180,7 @@
     font-size: 2rem;
     text-align: center;
     font-family: var(--fontPonpins-font-family);
+    visibility: visible;
 }
 
 
