--- a/responsiveTablette.css
+++ b/responsiveTablette.css
@@ -28,14 +28,15 @@
     grid-column-end: -1;
     top: 5em;
     cursor: pointer;
+    display: grid;
+    grid-template-columns: repeat(3 ,fr);
+    grid-template-rows: repeat(3 ,1em);
  }
  
  .menu-toggle div {
     width: 100%;
-    height: 0.24em;
     background: #141415;
     margin: 0.36em ;
-    transition: all 0.3s ease-in-out;
  }
 .logo
 {
